# claude-code-xai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  agentic_enricher.py  docker-compose.yml  main.py  manifest.json  models.py  pyproject.toml  requirements.txt  test-prompt-tools.sh
benchmarks/: __init__.py  __main__.py  export.py  metrics.py  runner.py
benchmarks/scenarios/: __init__.py  base.py  complex_schema.py  error_recovery.py  multi_tool_chain.py
bridge/: __init__.py  logging_config.py  token_logger.py
enrichment/: __init__.py  config.py  engine.py  factory.py  structure_loader.py  system_preamble.md  system_preamble.py
enrichment/behavioral/: __init__.py  base.py  tool_knowledge.py  what_enricher.py  when_enricher.py  why_enricher.py
enrichment/structural/: __init__.py  anti_patterns.py  base.py  errors.py  hateoas.py  manifest.py  near_miss.py  quality_gates.py  self_describing.py  tool_registration.py
handlers/: __init__.py  chat_completions.py  responses.py
structure/: manifest.yaml
structure/behavioral/: what.yaml  when.yaml  why.yaml
structure/preamble/: behavioral.yaml  identity.yaml
structure/structural/: anti_patterns.yaml  errors.yaml  hateoas.yaml  manifest.yaml  (+4 more)
tests/: conftest.py  smoke.py  test_benchmarks.py  test_e2e.py  test_e2e_live.py  test_e2e_no_key.py  test_integration.py
translation/: __init__.py  config.py  enrichment_folding.py  forward.py  model_routing.py  prompt_tools.py  responses_forward.py  responses_reverse.py  responses_streaming.py  reverse.py  shared.py  streaming.py  tool_parser.py  tools.py
(+44 files in other folders)
