[project]
name = "claude-code-xai"
version = "0.1.0"
description = "Claude Code to xAI bridge with Agentic API Standard enrichment"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "live: tests that require a live XAI_API_KEY and hit the real xAI API",
]
